--- a/链表.md
+++ b/链表.md
@@ -11,30 +11,33 @@
  */
 class Node {
 	/**节点值*/
-	private int data;
+	public int data;
 	/**指向下一个节点的指针*/
-	private Node next;
+	public Node next;
 	
 	public Node(int data) {
 		this.data = data;
-	}
-	
-	public int getData() {
-		return data;
-	}
-	public void setData(int data) {
-		this.data = data;
-	}
-
-
-	public Node getNext() {
-		return next;
-	}
-	public void setNext(Node next) {
-		this.next = next;
 	}
 }
 
 ~~~
 
  
+
+链表：
+
+~~~java
+/**
+ * 节点
+ * @author jokerpz
+ */
+public class LinkedListDemo {
+	/**头结点*/
+	publid Node head;
+	/**尾节点*/
+	public Node last;
+	/**链表大小*/
+	public int size;
+}
+~~~
+
